# comptador_vehicles

./: .gitattributes  CHANGELOG.md  README.md  dockerfile  infrastructure.yml  main.py  pyproject.toml  run.sh
config/: __init__.py  config.py  config.yaml  yolov3-320.cfg
vehicle_counter/: requirements.txt
vehicle_counter/app/: dockerfile  main.py
vehicle_counter/app/server/: app.py  database.py
vehicle_counter/app/server/models/: camera.py  direction.py  history_registry.py
vehicle_counter/app/server/routes/: camera.py
vehicle_counter/carbon_estimator/: estimator.py  simple_carbon_estimator.py
vehicle_counter/counter/: counter.py
vehicle_counter/detector/: coco_names.py  detector.py  middle_line.py  real_time_detector.py  static_detector.py
vehicle_counter/image_modifier/: image_modifier.py
vehicle_counter/model/: camera.py  history_registry.py
vehicle_counter/tracker/: euclidean_tracker.py  tracker.py
