[tool.poetry]
name = "vehicle-counter"
version = "0.9.1"
description = ""
authors = ["u1920603 <u1920603@gmail.com>"]
readme = "README.md"
packages = [{include = "vehicle_counter"}]

[tool.poetry.dependencies]
python = "3.8.16"
numpy = "1.20.3"
opencv-python = "4.4.0.46"
opencv-contrib-python = "4.4.0.46"
yamldataclassconfig = "1.5.0"
mongoengine = "0.27.0"
fastapi = "0.73.0"
uvicorn = "0.17.4"
motor = "2.5.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.1.1"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
